tests/language_modules/02_import/invalid_semantics/keyword_exposing_symbol.vf
module App.Main

import Banking.Proofs exposing module

end App.Main